<resources>
    <string name="app_name">Comet</string>

    <string name="title">Comet</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1612057252371169</string>
    <string name="title_activity_home_page2">HomePage2</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up_page">SignUpPage</string>
    <string name="title_activity_make_commit">MakeCommit</string>
    <string name="title_activity_make_commit2">MakeCommit2</string>
    <string name="title_activity_why_ref">WhyRef</string>

    <string-array name="MakeCommitOptions">
        <item>week(s)</item>
        <item>day(s)</item>
        <item>hour(s)</item>
        <item>minute(s)</item>
    </string-array>

    <string name="title_activity_set_the_stakes">SetTheStakes</string>
    <string name="title_activity_commit__summary">Commit_Summary</string>
    <string name="title_activity_payment__info">Payment_Info</string>
    <string name="title_activity_log_in_form">Log_in_form</string>
    <string name="title_activity_profile__page">Profile_Page</string>
    <string name="title_activity_checkout_">Checkout_Activity</string>

    <!--<string name="app_name">ParseStore</string> -->

    <string name="title_activity_splash">Splash</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="item_name">Item Name</string>
    <string name="order">Order</string>
    <string name="price_label">Price Label</string>
    <string name="size">Size</string>
    <string-array name="sizes">
        <item>Select Size</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string name="title_activity_shipping_view">ShippingView</string>
    <string name="us_address_only">US mailing address only</string>
    <string name="postalCode">Postal Code</string>
    <string name="city_state">City, State</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="checkout">Checkout</string>

    <string name="title_activity_checkout">Checkout</string>
    <string name="card_info_prompt">Enter your credit card information</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="credit_card">1234 5678 9012 3456</string>
    <string name="date_hint">MM/DD</string>
    <string name="zip_code">ZIP</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>

    <string name="endingIn">Card ending in </string>
    <string name="authorizing">Authorizing</string>
    <string name="charging">Charging</string>
    <string name="validationErrors">Card Error</string>
    <string name="invalidEmail">Invalid Email</string>
</resources>
