<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_weight="0.22">


        <RelativeLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.parse.ParseImageView
                        android:layout_width="110dp"
                        android:layout_height="150dp"
                        android:id="@+id/productImage"
                        android:src="@drawable/tshirt"
                        android:layout_gravity="left" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/priceLabel"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        android:text="@string/price_label"
                        android:gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:textStyle="bold"
                        android:layout_weight="0.22" />

                    <TextView
                        android:textSize="20sp"
                        android:text="@string/item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/productName"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:paddingBottom="5dp"/>

                    <Spinner
                        android:id="@+id/sizeList"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/sizes"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/orderButton"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/order"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        android:textAlignment="center"
                        android:background="@drawable/custom_button"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>